# 2d-predator-prey-model

./: .gitignore  Cargo.toml  LICENSE  README.md
design/: component-diagram.plantuml
sample-configs/: dsam-fish.json  pppe-fish.json  simple-fish.json
src/: gfx.rs  gui.rs  main.rs  model.rs  stats.rs  util.rs
src/models/: grid.rs  mod.rs  params.rs  pppe_model.rs  simple_model.rs
