[package]
name = "onderzoeksmethoden"
version = "0.1.0"
authors = ["Casper Uiterwijk <casper.uiterwijk@gmail.com>", "Martijn Drenth <mdrenth01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_pcg = "0.2"
sdl2 = "0.34"
bimap = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }